--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     10px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
@@ -51,3 +51,8 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+.post{
+  //border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 50px;
+}
